# TLogger

./: CMakeLists.txt  LICENSE  Logger.cpp  Logger.h  Makefile  README.md  main.cpp
include/: Logger.h
src/: Logger.cpp
